--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t websstone/docker-react -f Dockerfile.dev .
+  - docker build -t websstone/docker-react -f Dockerfile .
 
 script:
   - docker run -e CI=true websstone/docker-react npm run test
